# dg-ngn

./: README.typ  justfile
demos/: Cargo.toml  physics.rs  voxel.rs
demos/assets/terrain/: 00.terrain  00_color.tif  00_height.tif  01.terrain
dg-console/: Cargo.toml
dg-console/benches/: command_parsers.rs
dg-console/src/: command.rs  command_parser_combinator.rs  lib.rs
dg-math/: Cargo.toml  README.typ
dg-math/benches/: simd.rs
dg-math/src/: aabb.rs  circle.rs  color.rs  colors.rs  frustrum.rs  frustum.rs  global_transform.rs  interp.rs  lib.rs  line.rs  plane.rs  polar.rs  projection.rs  ray.rs  rect.rs  rotor.rs  transform.rs
dg-math/src/algorithms/: convex_hull.rs  ear_clipping.rs  gauss_seidel.rs  gaussian_elimination.rs  mod.rs
dg-math/src/matrix/: matrix2x2.rs  matrix3x2.rs  matrix3x3.rs  matrix4x4.rs  matrix_r_x_c.rs  mod.rs
dg-math/src/vector/: ivec2.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs  vec_n.rs
dg-math/src/vector/simd/: mod.rs  vec4.rs
dg-packer/: Cargo.toml  justfile  test.pck
dg-packer/src/: main.rs  manifest.rs  packed_asset.rs  source_loader.rs
dg-packer/src/loaders/: image_loader.rs  mod.rs  text_loader.rs  texture_loader.rs
dg-packer/src/test/: a.txt  test.toml
dg-packer/temp/: a.toml
dg-partition/: Cargo.toml
dg-partition/src/: lib.rs  octree.rs  quadtree.rs  rtree1d.rs  rtree2d.rs
dg-physics/: Cargo.toml
dg-physics/src/: lib.rs
dg-reflect/: Cargo.toml
dg-reflect/dg-reflect-proc/: Cargo.toml
dg-reflect/src/: lib.rs
dg-renderer/: Cargo.toml
dg-resource/: Cargo.toml
dg-runtime/: Cargo.toml
dg-script/: Cargo.toml  test.txt
dg-structures/: Cargo.toml
dg-ui/: Cargo.toml
scripts/: build_colors.rs
(+21 files in other folders)
