[package]
name = "dg-console"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "command_parsers"
harness = false


[profile.bench]
debug = 1

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]