[package]
name = "dg-math"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9.1" }

[features]
default = []
high-precision = []
large-integers = []
simd = []

[[bench]]
name = "simd"
harness = false